--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,8 @@ spring.resources.static-locations=file:src/main/resources/static/
 spring.thymeleaf.cache=true
 # spring.thymeleaf.prefix=file:src/main/resources/templates/
 
-# Powershell 이용하여 실행 시, .jar에 말려있는 리소스 접근 시,
-# 반드시 classpath 경로 사용해야 함!
+# Powershell 사용하여 .jar 파일로 실행할 경우,
+# 스프링이 리소스에 접근할 때, 반드시 classpath 경로 사용해야 함!
 # file: 접근 시, 자바가 실행된 실제 위치를 기준으로 진짜 파일 경로를 찾게 됨
 # Ex) classpath:/templates
 # build/libs 에서 java -jar xxx를 실행하면 build/libs/src/main/resources/templates/hello.html 파일 찾게 됨
